# Dev_KTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ATest/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  HTest.h  Main.cpp  MainInit.cpp  TestAdd1.cpp  TestAdd2.cpp  TestAdd2.h  TestSub2.cpp  TestSub2.h  ccNDelay.h
CommonLib/: CMakeLists.txt  cmnPaths.cpp  cmnPaths.h  cmnPriorities.h  cmnPriorities_linux.cpp  cmnPriorities_win.cpp  someAlphaParms.cpp  someAlphaParms.h  someMemoryParms.cpp  someMemoryParms.h
HTest/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  HTest.cpp  HTest.h  MainInit.cpp  TestAdd1.cpp  TestAdd1.h  TestAdd2.cpp  TestAdd2.h
KTest/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  KTest.cpp  KTest.h
RisLib/: CMakeLists.txt  aaa_copy_from_rislib.bat  risSRSWObjectQueue.h  risSerialPort_linux_read.cpp  risSerialStringThread.h  risThreadsWaitable_win.cpp
Test/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp
zzzMacros/: MyCodeMacros.cmake  MyGlobalImports.cmake
